# peekle

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md
src/blockether_peekle/: main.py
src/blockether_peekle/utils/: __init__.py  format_value.py
src/blockether_peekle/widgets/: __init__.py
src/blockether_peekle/widgets/autocomplete/: __init__.py  autocomplete.py  path_autocomplete.py  text_area_autocomplete.py
src/blockether_peekle/widgets/repl_text_area/: __init__.py  autocomplete_config.py  autocomplete_core.py  matching_strategies.py  repl_text_area.py
src/blockether_peekle/widgets/text_area_autocomplete/: __init__.py  autocomplete_config.py  autocomplete_core.py  text_area_autocomplete.py
tests/: __init__.py
